--- a/evaluation/evaluation.ipynb
+++ b/evaluation/evaluation.ipynb
@@ -2,195 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "import altair as alt"
+    "import benchmark as bm\n",
+    "\n",
+    "from ghostumap import GhostUMAP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnist, mnist_knn = bm.load_dataset('mnist')\n",
+    "celegans, celegans_knn = bm.load_dataset('celegans')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bm.benchmark_accuracy(mnist, precomputed_knn=mnist_knn, halving_points=[200, 300, 400], title = 'mnist')\n",
+    "bm.benchmark_time(mnist, precomputed_knn=mnist_knn, halving_points=[200, 300, 400], title = 'mnist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>n_embeddings</th>\n",
-       "      <th>n_ghosts</th>\n",
-       "      <th>halving</th>\n",
-       "      <th>time_mean</th>\n",
-       "      <th>f1_200_mean</th>\n",
-       "      <th>f1_500_mean</th>\n",
-       "      <th>f1_1000_mean</th>\n",
-       "      <th>time_std</th>\n",
-       "      <th>f1_200_std</th>\n",
-       "      <th>f1_500_std</th>\n",
-       "      <th>f1_1000_std</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GhostUMAP</td>\n",
-       "      <td>1</td>\n",
-       "      <td>32</td>\n",
-       "      <td>True</td>\n",
-       "      <td>68.064</td>\n",
-       "      <td>0.666</td>\n",
-       "      <td>0.636</td>\n",
-       "      <td>0.388</td>\n",
-       "      <td>2.349</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>0.007</td>\n",
-       "      <td>0.005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GhostUMAP</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>True</td>\n",
-       "      <td>77.367</td>\n",
-       "      <td>0.720</td>\n",
-       "      <td>0.671</td>\n",
-       "      <td>0.464</td>\n",
-       "      <td>1.990</td>\n",
-       "      <td>0.037</td>\n",
-       "      <td>0.019</td>\n",
-       "      <td>0.097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GhostUMAP</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>True</td>\n",
-       "      <td>96.101</td>\n",
-       "      <td>0.750</td>\n",
-       "      <td>0.727</td>\n",
-       "      <td>0.647</td>\n",
-       "      <td>2.105</td>\n",
-       "      <td>0.015</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>0.142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GhostUMAP</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>False</td>\n",
-       "      <td>222.961</td>\n",
-       "      <td>0.754</td>\n",
-       "      <td>0.726</td>\n",
-       "      <td>0.508</td>\n",
-       "      <td>3.468</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>0.011</td>\n",
-       "      <td>0.112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GhostUMAP</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>127.835</td>\n",
-       "      <td>0.782</td>\n",
-       "      <td>0.749</td>\n",
-       "      <td>0.653</td>\n",
-       "      <td>2.750</td>\n",
-       "      <td>0.021</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>GhostUMAP</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>191.237</td>\n",
-       "      <td>0.803</td>\n",
-       "      <td>0.777</td>\n",
-       "      <td>0.724</td>\n",
-       "      <td>2.624</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.027</td>\n",
-       "      <td>0.142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>GhostUMAP</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>289.807</td>\n",
-       "      <td>0.838</td>\n",
-       "      <td>0.801</td>\n",
-       "      <td>0.831</td>\n",
-       "      <td>4.078</td>\n",
-       "      <td>0.019</td>\n",
-       "      <td>0.021</td>\n",
-       "      <td>0.054</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       model  n_embeddings  n_ghosts  halving  time_mean  f1_200_mean  \\\n",
-       "0  GhostUMAP             1        32     True     68.064        0.666   \n",
-       "1  GhostUMAP             2        16     True     77.367        0.720   \n",
-       "2  GhostUMAP             4         8     True     96.101        0.750   \n",
-       "3  GhostUMAP             4         8    False    222.961        0.754   \n",
-       "4  GhostUMAP             8         4     True    127.835        0.782   \n",
-       "5  GhostUMAP            16         2     True    191.237        0.803   \n",
-       "6  GhostUMAP            32         1    False    289.807        0.838   \n",
-       "\n",
-       "   f1_500_mean  f1_1000_mean  time_std  f1_200_std  f1_500_std  f1_1000_std  \n",
-       "0        0.636         0.388     2.349       0.017       0.007        0.005  \n",
-       "1        0.671         0.464     1.990       0.037       0.019        0.097  \n",
-       "2        0.727         0.647     2.105       0.015       0.030        0.142  \n",
-       "3        0.726         0.508     3.468       0.017       0.011        0.112  \n",
-       "4        0.749         0.653     2.750       0.021       0.012        0.127  \n",
-       "5        0.777         0.724     2.624       0.012       0.027        0.142  \n",
-       "6        0.801         0.831     4.078       0.019       0.021        0.054  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Benchmarking time\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeongmyeong-won/Library/Application Support/hatch/env/virtual/ghostumap/lpj6sL2Q/ghostumap/lib/python3.12/site-packages/umap/umap_.py:2012: UserWarning: precomputed_knn[2] (knn_search_index) is not an NNDescent object: transforming new data with transform will be unavailable.\n",
+      "  warn(\n",
+      "/Users/jeongmyeong-won/Library/Application Support/hatch/env/virtual/ghostumap/lpj6sL2Q/ghostumap/lib/python3.12/site-packages/umap/umap_.py:2012: UserWarning: precomputed_knn[2] (knn_search_index) is not an NNDescent object: transforming new data with transform will be unavailable.\n",
+      "  warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "300\n",
+      "400\n",
+      "Time umap: 3.8784892559051514\n",
+      "Time w halving: 18.427716970443726\n",
+      "Time wo halving: 27.935964107513428\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeongmyeong-won/Library/Application Support/hatch/env/virtual/ghostumap/lpj6sL2Q/ghostumap/lib/python3.12/site-packages/umap/umap_.py:2012: UserWarning: precomputed_knn[2] (knn_search_index) is not an NNDescent object: transforming new data with transform will be unavailable.\n",
+      "  warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "300\n",
+      "400\n",
+      "Time umap: 3.6124210357666016\n",
+      "Time w halving: 18.681382179260254\n",
+      "Time wo halving: 30.343863010406494\n",
+      "Umap: 3.7454551458358765 ± 0.1330341100692749\n",
+      "with halving: 18.55454957485199 ± 0.12683260440826416\n",
+      "without halving: 29.13991355895996 ± 1.2039494514465332\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv('./result/MNIST/result.csv')\n",
-    "df.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "df"
+    "bm.benchmark_accuracy(celegans, precomputed_knn=celegans_knn, halving_points=[200, 300, 400], title = 'celegans')\n",
+    "bm.benchmark_time(celegans, precomputed_knn=celegans_knn, halving_points=[200, 300, 400], title = 'celegans')"
    ]
   }
  ],
